--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
@@ -9,7 +9,7 @@
                         <div class="radio-inline">{{answer.text}}</div>
                         <input 
                             type="radio" 
-                            ng-change="change(question.model)"
+                            ng-change="change()"
                             name="answer{{$parent.$index}}" 
                             ng-model="question.model" 
                             ng-value="answer"
