--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -12,8 +12,7 @@
   </div>
   <div class="panel-body">
     <div>
-      <div class="line">Patienten samtycker till att delta i SRS pilotprojektet </div><div style="float:right;" class="glyphicon glyphicon-question-sign"
-           title="Risksignalen för att sjukfallet varar mer än 90 dagar beräknas med matematiska metoder tillämpade på en rad variabler som till exempel ålder, kön, bostadsort och tidigare vårdkontakter för att försöka detektera om den aktuella individens risk skiljer sig från andra patienter inom samma diagnosgrupp. Metoden ska ses som ett komplement inför den egna professionella bedömningen."></div>
+      <div class="line">Patienten samtycker till att delta i SRS pilotprojektet</div>
       <div class="line form-group ng-scope">
         <label class="radio-inline line">
               <input type="radio" name="capacityForWorkForecast" id="capacityForWork1" ng-value="true" ng-model="consentGiven" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent(true)"> Ja</label>
@@ -41,12 +40,8 @@
       </div>
     <div id="collapseExample" class="panel-collapse collapse in">
       <div ng-show="consentGiven">
-        <div ng-show="inQuestionaireState">
           <wc-srs-questionaire></wc-srs-questionaire>
-        </div>
-        <div ng-show="!inQuestionaireState">
           <wc-srs-result></wc-srs-result>
-        </div>
       </div>
 
     </div>
