--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
@@ -19,7 +19,7 @@
             </div>
 
             <button style="float:right;" type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="btn btn-info ng-binding" ng-click="visaClicked()"
-                uib-popover="Visa resultat." popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
+                ng-disabled="!allQuestionsAnswered" popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="auto top">
                     Visa
             </button>
