INTYG-4496: Fixat rubriken på dialogen för vårdadmin

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/komplettering-modal-dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/komplettera/komplettering-modal-dialog.html
@@ -6,8 +6,8 @@
 </div>
 <div class="modal-body">
   <div>
-    <div class="row">
-      <div class="col-md-6 dialog-column-divider-right" ng-if="model.arendeSvar.showOvrigaUpplysningar">
+    <div class="row" ng-if="model.arendeSvar.showOvrigaUpplysningar">
+      <div class="col-md-6 dialog-column-divider-right">
         <div class="dialog-choice-box" ng-if="!model.arendeSvar.svaraMedNyttIntygDisabled">
           <div class="dialog-choice-box__text-section">
             <h4>Ingen ytterligare medicinsk information kan anges</h4>
@@ -30,7 +30,24 @@
           </div>
         </div>
       </div>
-      <div ng-class="{'col-md-12': !model.arendeSvar.showOvrigaUpplysningar, 'col-md-6': model.arendeSvar.showOvrigaUpplysningar}">
+      <div class="col-md-6">
+        <div class="dialog-choice-box">
+          <div class="dialog-choice-box__text-section">
+            <h4>Ingen medicinskt ansvarig finns tillgänglig</h4>
+            <p>Intygsutfärdaren finns inte längre tillgänglig och ingen annan på vårdenheten kan ansvara för innehållet i ursprungsintyget.*</p>
+            <div class="dialog-choice-box__button-section">
+              <button type="button" id="komplettering-modal-dialog-answerWithMessage-button" class="btn btn-default" ng-click="button2click()">
+                Svara med meddelande
+              </button>
+            </div>
+            <p class="dialog_choice-box__warning-text">*OBS! Ingen medicinsk information ska anges.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" ng-if="!model.arendeSvar.showOvrigaUpplysningar">
+      <div class="col-md-12">
         <div class="dialog-choice-box">
           <div class="dialog-choice-box__text-section">
             <h4>Ingen kan ta det medicinska ansvaret för intyget</h4>
