--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
@@ -1,28 +1,21 @@
 <div class="intyg-block__titlerow ng-scope">
-        <section>
-            <div ng-repeat="question in questions">
-                <div>
-                    <br/><span>{{question.text}}</span>
-                </div>
-                <div ng-repeat="answer in question.answerOptions" for="{{answer}}">
-                    <div>
-                        <div class="radio-inline">{{answer.text}}</div>
-                        <input 
-                            type="radio" 
-                            ng-change="change()"
-                            name="answer{{$parent.$index}}" 
-                            ng-model="question.model" 
-                            ng-value="answer"
-                        />{{answer.answertxt}}
-                    </div>
+    <section>
+        <div ng-repeat="question in questions">
+            <div>
+                <br/><span>{{question.text}}</span>
+            </div>
+            <div>
+                <div style="display: inline !important" ng-repeat="answer in question.answerOptions" for="{{answer}}">
+                    <input type="radio" ng-change="change()" name="answer{{$parent.$index}}" ng-model="question.model" ng-value="answer" />{{answer.answertxt}}
+                    <div style="display: inline !important">{{answer.text}}</div>
                 </div>
             </div>
-
-            <button style="float:right;" type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="btn btn-info ng-binding" ng-click="visaClicked()"
-                ng-disabled="!allQuestionsAnswered" popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
-                popover-placement="auto top">
+        </div>
+        <button style="float:right;" type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="btn btn-info ng-binding"
+            ng-click="visaClicked()" ng-disabled="!showVisaKnapp" popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
+            popover-placement="auto top">
                     Visa
             </button>
-            <br><br>
-        </section>
+        <br><br>
+    </section>
 </div>
