INTYG-4181: diverse fixar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -16,7 +16,8 @@
 
 <div class="tab-content">
     <div id="atgarder" class="tab-pane fade in active">
-        <br>
+        <br>            
+        infoMessage: {{atgarderInfoMessage}}
         <div ng-if="atgarderInfoMessage">
                 <wc-srs-info-box message-string="atgarderInfoMessage"></wc-srs-info-box>
             </div>
