--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -17,7 +17,6 @@
 <div class="tab-content">
     <div id="atgarder" class="tab-pane fade in active">
         <br>            
-        infoMessage: {{atgarderInfoMessage}}
         <div ng-if="atgarderInfoMessage">
                 <wc-srs-info-box message-string="atgarderInfoMessage"></wc-srs-info-box>
             </div>
@@ -45,6 +44,6 @@
     </div>
 
     <div style="float: right;">
-        <button class="btn btn-info ng-binding" ng-click="blabla()">Läs mer</button>
+        <button class="btn btn-info ng-binding button-rounded" ng-click="blabla()">Läs mer</button>
     </div>
 </div>
