INTYG-4181: påbörjat kryss-iconen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -4,7 +4,7 @@
       <h4 style="float:left"><span id="fmb_diagnos_heading_{{relatedFormId}}">{{fmb.diagnosKod}} - {{fmb.diagnosBeskrivning}}</span>
       </h4>
     </div>
-      <button type="button" class="btn btn-default glyphicon glyphicon-remove close-button" ng-click="status.open = !status.open"><i></i></button>
+      <button type="button" class="close-button btn btn-default glyphicon glyphicon-remove" ng-click="status.open = !status.open"><i></i></button>
   </div>
   <div class="panel-body">
       <div ng-if="infoMessage">
