--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -4,7 +4,8 @@
       <h4 style="float:left"><span id="fmb_diagnos_heading_{{relatedFormId}}">{{fmb.diagnosKod}} - {{fmb.diagnosBeskrivning}}</span>
       </h4>
     </div>
-      <button type="button" class="close-button btn btn-default glyphicon glyphicon-remove" ng-click="status.open = !status.open"><i></i></button>
+    
+      <button style="background-color: Transparent; background-repeat:no-repeat; border: none; cursor:pointer; overflow: hidden; outline:none;" type="button" class="btn btn-default" ng-click="status.open = !status.open"><i><img src="http://d26uhratvi024l.cloudfront.net/gsc/8RRLM2/e1/36/f7/e136f736a06747b3a1f18322df08f9fe/images/webcert_-_m75/u135.png?token=eb4675cc65972824d1fee9f65f1c4310" alternative="closeButton"></i></button>
   </div>
   <div class="panel-body">
       <div ng-if="infoMessage">
