INTYG-4428: externa länkar till rättsjukskrivning.se tillagda, enligt given information

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -43,6 +43,6 @@
     </div>
 
     <div style="float: right;">
-        <button class="btn btn-info ng-binding button-rounded" ng-click="blabla()">Läs mer</button>
+        <button class="btn btn-info ng-binding button-rounded" ng-click="redirectToAtgardExternalSite(diagnosKod)">Läs mer</button>
     </div>
 </div>
