--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -15,9 +15,9 @@
   >
   </div>
 </div>
-<ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#atgarder">Åtgärder</a></li>
-    <li><a data-toggle="tab" href="#statstics">Statistik</a></li>
+<ul class="nav nav-tabs nav-justified">
+    <li class="rounded active"><a data-toggle="tab" href="#atgarder">Åtgärder</a></li>
+    <li class="rounded"><a data-toggle="tab" href="#statstics">Statistik</a></li>
 </ul>
 
 <div class="tab-content">
