--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -34,7 +34,7 @@
         <h3>Rekommenderade åtgärder</h3>
 
         <div ng-repeat="(key,value) in atgarderRek">
-            <div wc-clamp="3" ng-bind-html="'• ' + value"></div>
+            <div clamp="3" ng-bind-html="'• ' + value"></div>
             <br>
         </div>
 
