--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcNewPersonIdMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcNewPersonIdMessage.directive.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-show="show">
+<div id="wc-new-person-id-message" class="padding-top-medium" ng-show="show">
   <div class="alert alert-warning alert-column" id="nyttPersonnummer">
     <span ng-bind-html="message"></span>
   </div>
