--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -81,7 +81,7 @@
             </div>
             <div class="clearfix"></div>
 
-            <div wc-new-person-id-message patient="viewState.intygModel.grundData.patient"></div>
+            <div wc-new-person-id-message></div>
 
             <div wc-patient-info-change-message intyg="viewState.intygModel" context="UTKAST"></div>
 
