INTYG-4490: Skyltar för namn och adress och css.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -171,7 +171,7 @@
 
       <div wc-new-person-id-message></div>
 
-      <div wc-patient-info-change-message intyg="viewState.intygModel" context="INTYG"></div>
+      <div wc-patient-info-change-message intyg="viewState.intygModel" intyg-properties="viewState.common.intygProperties" context="INTYG"></div>
 
       <div wc-intyg-related-revoked-message view-state="viewState"></div>
 
