--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -27,8 +27,9 @@
                 <span>{{intygsnamn}}</span><span wc-help-chevron help-text-key="FRM_2.RBK"></span>
               </h1>
 
-              <span wc-help-chevron-text help-text-key="FRM_2.RBK"></span>
-
+              <div class="header-help-container">
+                <span wc-help-chevron-text help-text-key="FRM_2.RBK"></span>
+              </div>
 
               <div class="form-group buttonbar">
                 <button type="button" id="skriv-ut-utkast" class="btn btn-info" ng-if="!viewState.common.isSigned"
