INTYG-4527: Ändrat placering av datumväljare.
Hamnade utanför bild på fk7263 och låg fönsterhöjd.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/date/wcDatePickerField.directive.html
@@ -10,6 +10,7 @@
            maxlength="10"
            wc-set-date-on-close
            uib-datepicker-popup="{{format}}"
+           popup-placement="auto right"
            max-date="{{maxDate}}"
            min-date="{{minDate}}"
            ng-model-options="{ allowInvalid: true }"
