INTYG-4181: tog bort url för png och la till den lokalt

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -6,7 +6,7 @@
     </div>
     
       <button style="background-color: Transparent; background-repeat:no-repeat; border: none; cursor:pointer; overflow: hidden; outline:none;" type="button" class="btn btn-default" ng-click="status.open = !status.open"><i>
-        <img src="http://d26uhratvi024l.cloudfront.net/gsc/8RRLM2/e1/36/f7/e136f736a06747b3a1f18322df08f9fe/images/webcert_-_m75/u135.png?token=dd70cc546d34a0bad05d75c0850eae35" alt="closeButton">
+        <img src="/web/webjars/common/webcert/srs/img/u135.png" alt="closeButton">
       </i></button>
   </div>
   <div class="panel-body">
