INTYG-4556: tagit bort, samt lagt till idn

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsQuestionaire.directive.html
@@ -1,4 +1,4 @@
-<div class="intyg-block__titlerow ng-scope">
+<div id="questionaire" class="intyg-block__titlerow ng-scope">
     <section>
         <div ng-repeat="question in questions">
             <div>
