--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -29,11 +29,16 @@
         <div ng-if="atgarderError">
             <wc-srs-error-box message-string="atgarderError"></wc-srs-error-box>
         </div>
-        <p><b>Tänk på att;</b> {{statistik.atgardObs}}.</p>
+        <div style="float:left;"><b>Tänk på att; </b></div>
+            <div style="float:left;" ng-repeat="atgardObs in statistik.atgarderObs">
+                {{atgardObs}}. 
+            <!--{{statistik.atgardObs}}.</p>-->
+            </div>
+            <br><br>
 
         <h3>Rekommenderade åtgärder</h3>
 
-        <div ng-repeat="(key,value) in atgarderRek">
+        <div ng-repeat="(key,value) in statistik.atgarderRek">
             <div clamp="3" ng-bind-html="'• ' + value"></div>
             <br>
         </div>
