--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsHelpDisplay.directive.html
@@ -1,19 +1,18 @@
 <div>
   <div ng-show="srsAvailable">
-    <div class="srs">
-      <button id="{{relatedFormId}}-fmb-button" type="button" class="btn btn-default btn-fmb" ng-click="status.open = !status.open; logSrsButtonClicked(); closeFmb();">SRS <i
-          class="glyphicon fmb-glyphicon"
-          ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"
-          in-view="srsButtonVisible = $inview"
-      ></i></button>
-      <div class="panel-wrapper-fmb"
+    <div id="srs">
+      <button id="{{relatedFormId}}-srs-button" type="button" class="btn btn-default btn-srs" ng-click="status.open = !status.open; logSrsButtonClicked(); closeFmb();">
+        SRS 
+        <i class="glyphicon srs-glyphicon" ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}" in-view="srsButtonVisible = $inview"></i>
+      </button>
+      <div id="panel-wrapper-srs"
            ng-show="status.open"
-           ng-class="{'fmb-collapse': !status.open, 'fixed-panel': !srsButtonVisible}">
+           ng-class="{'srs-collapse': !status.open, 'fixed-panel': !srsButtonVisible}">
         <div class="panel-arrow"></div>
-        <div class="panel panel-fmb-info">
-          <uib-tabset active="test" class="fmb-panel-tabset nav-tabs__fmb"
+        <div class="panel panel-srs-info">
+          <uib-tabset active="test" class="srs-panel-tabset nav-tabs__srs"
                       ng-class="{'hide-tabs': (srsStates.diagnoses | keyLength) < 2}">
-            <uib-tab index="$index + 1" ng-repeat="fmb in srsStates.diagnoses" heading="{{srsStates.diagnosKod}}"
+            <uib-tab index="$index + 1" ng-repeat="srs in srsStates.diagnoses" heading="{{srsStates.diagnosKod}}"
                      disable="false" select="selectDiagnos($index)">
               <wc-srs-content></wc-srs-content>
             </uib-tab>
@@ -22,7 +21,7 @@
       </div>
     </div>
   </div>
-  <div ng-class="{'fmb-column': srsAvailable}">
+  <div ng-class="{'srs-column': srsAvailable}">
     <div ng-transclude></div>
   </div>
 </div>
