--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -29,18 +29,19 @@
         <div ng-if="atgarderError">
             <wc-srs-error-box message-string="atgarderError"></wc-srs-error-box>
         </div>
-        <div style="float:left;"><b>Tänk på att; </b></div>
-            <div style="float:left;" ng-repeat="atgardObs in statistik.atgarderObs">
+        <div id="atgarderObs" class="floatLeft"><b>Tänk på att; </b></div>
+            <div class="floatLeft" ng-repeat="atgardObs in statistik.atgarderObs">
                 {{atgardObs}}. 
             <!--{{statistik.atgardObs}}.</p>-->
             </div>
             <br><br>
 
         <h3>Rekommenderade åtgärder</h3>
-
-        <div ng-repeat="(key,value) in statistik.atgarderRek">
-            <div clamp="3" ng-bind-html="'• ' + value"></div>
-            <br>
+        <div id="atgarderRek">
+            <div ng-repeat="(key,value) in statistik.atgarderRek">
+                <div clamp="3" ng-bind-html="'• ' + value"></div>
+                <br>
+            </div>
         </div>
 
     </div>
@@ -55,7 +56,7 @@
         <img ng-src="{{statistik.statistikBild}}" alt=""/>
     </div>
 
-    <div style="float: right;">
+    <div class="floatRight">
         <button class="btn btn-info ng-binding button-rounded" ng-click="redirectToAtgardExternalSite(diagnosKod)">Läs mer</button>
     </div>
 </div>
