INTYG-4469: Vid DJUPINTEGRATION så prioriteras alltid info om död patient

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -75,7 +75,7 @@
 
                 <br>
                 <span wc-sekretess-avliden uuid="viewState.intygModel.grundData.patient.personId" printlabel="true"
-                      avliden="viewState.intygModel.grundData.patient.avliden"
+                      avliden="viewState.common.intygProperties.isPatientDeceased"
                       sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
 
               </div>
