--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -41,7 +41,7 @@
              patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
              person-id="viewState.intygModel.grundData.patient.personId">
         </div>
-        <span wc-sekretess-avliden uuid="viewState.intygModel.grundData.patient.personId" printlabel="true" avliden="viewState.intygModel.grundData.patient.avliden" sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
+        <span wc-sekretess-avliden uuid="viewState.intygModel.grundData.patient.personId" printlabel="true" avliden="viewState.common.intygProperties.isPatientDeceased" sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
       </div>
       <div class="form-group">
         <div class="btn-row">
